--- a/project_final/front/css/common.css
+++ b/project_final/front/css/common.css
@@ -157,3 +157,12 @@ nav {
   border: none;
   border-radius: 15px;
 }
+#home1 {
+  font-size: 12px;
+  padding: 5px 10px;
+  margin-right: 10px;
+  float: right;
+  background-color: #f5f5dc; /* 아이보리색 배경 */
+  border: 1px solid #ffffff; /* 흰색 테두리 */
+  color: #000000; /* 버튼 텍스트 색상 */
+}
